--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         }
 
         .cta-section {
-            background-image: linear-gradient(120deg, rgba(5,5,5,0.8), rgba(5,5,5,0.9)), url('batik%202.jpg');
+            background-image: linear-gradient(120deg, rgba(5,5,5,0.8), rgba(5,5,5,0.9)), url('img/batik%202.jpg');
             background-size: cover;
             background-position: center;
             border-radius: 32px;
@@ -1133,3 +1133,4 @@
 </body>
 
 </html>
+
